# unsaferef

./: Cargo.toml  LICENSE  README.md  Taskfile.yaml
.github/workflows/: CI.yaml  auto-approve.yaml
src/: lib.rs  unsafe_cow.rs  unsafe_ref.rs
